8252500: ZGC on aarch64: Unable to allocate heap for certain Linux kernel configurations